syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

import "google/protobuf/empty.proto";

/**
 * Data Management API for both data providers and consumers.
 */
service Data {
    // Get returns information of the data from your warehouse or purchased data.
    rpc Get (DataId) returns (DataResult);
    rpc GetBatch (BatchRequest) returns (GetBatchResult);

    /**
     * These are getter methods for users that wants to get bundle/userId information.
     */
    rpc GetBundleInfo (BundleInfoRequest) returns (BundleInfoResponse);

    // SetPermission allows a consumer to access the given data.
    rpc SetPermission (SetDataPermissionRequest) returns (google.protobuf.Empty);
    rpc SetPermissionBatch (SetBatchDataPermissionRequest) returns (google.protobuf.Empty);

    // Delete removes specific data from your warehouse or purchased data.
    rpc Delete (DataId) returns (google.protobuf.Empty);
    rpc DeleteBatch (BatchRequest) returns (google.protobuf.Empty);

    // Select receives stream of data ID and creates a batch of data IDs.
    // the batch can be used as a input of batch operations.
    rpc Select (stream DataId) returns (BatchRequest);

    // Release unselects and removes the batch.
    rpc Release (BatchRequest) returns (google.protobuf.Empty);
}

message BatchRequest {
    string batchId = 1; // ID
}

message DataId {
    string dataId = 1; // ID
}

message DataResult {
    string collectionId = 1; // ID
    string userId = 2; // ID
    int64 ingestedAt = 3;
    string payload = 4;
}

message GetBatchResult {
    repeated DataResult data = 1;
}

// TODO : pagination
message BundleInfoRequest {
    string bundleId = 1;
}

message BundleInfoResponse {
    string bundleId = 1;
    string uri = 2;
    string provider = 3;
    string collection = 4;
    uint64 dataCount = 5;
    int64 ingestedAt = 6;
    repeated string dataInfoes = 7;
}

message SetDataPermissionRequest {
    string dataId = 1; // ID
    string consumerId = 2; // ID
    bool allowAccess = 3;
}

message SetBatchDataPermissionRequest {
    string batchId = 1; // ID
    string consumerId = 2; // ID
    bool allowAccess = 3;
}
